--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <h1>Games aren't any good without a graphics cards. Intel hasn't cared till now.</h1>
       <h2 id="subtitle">Intel is releasing its first graphics cards next year, finally giving gamers and designers an option other than AMD or Nvidia.</h2>
-      <h2 id="instructions">Move your cursor over the video below to see how low-end (left) and high-end (right) PC graphics cards perform with Star Wars Jedi: Fallen Order.</h2>
+      <h2 id="instructions">Move your cursor over the video below to see how low-end (left) and high-end (right) PC graphics cards perform while playing Star Wars Jedi: Fallen Order.</h2>
       <div id="video-compare-container">
         <video loop autoplay poster="https://s3.us-east-1.amazonaws.com/comp-vid/images/HQ-frame.jpg">
           <source src=https://s3.us-east-1.amazonaws.com/comp-vid/videos/HQ-60fps.mp4>
