--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
   <body>
     <div class="container">
-      <h1>Games aren't any good without a graphics cards. Intel hasn't cared till now.</h1>
+      <h1>Intel just realized, games aren't any good without a graphics cards.</h1>
       <h2 id="subtitle">Intel is releasing its first graphics cards next year, finally giving gamers and designers an option other than AMD or Nvidia.</h2>
       <h2 id="instructions">Move your cursor over the video below to see how low-end (left) and high-end (right) PC graphics cards perform while playing Star Wars Jedi: Fallen Order.</h2>
+      <h2 id="instructions">Reload the page if the videos don't load.</h2>
       <div id="video-compare-container">
         <video loop autoplay poster="https://s3.us-east-1.amazonaws.com/comp-vid/images/HQ-frame.jpg">
           <source src=https://s3.us-east-1.amazonaws.com/comp-vid/videos/HQ-60fps.mp4>
@@ -28,7 +29,7 @@
         </div>
 
       </div>
-      <p>Note: resolution and frame rates are of representative of in-game performance.
+      <p>Note: resolution and frame rates are representative of in-game performance.
         Actual resolution in clips is scaled-down.</p>
     </div>
 
